; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackGetK.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Mayaqua/extr_Pack.c_PackGetK.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @PackGetK(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i8*, i8** %5, align 8
  %12 = icmp eq i8* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  store i32* null, i32** %3, align 8
  br label %33

14:                                               ; preds = %10
  %15 = load i32*, i32** %4, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = call i32* @PackGetBuf(i32* %15, i8* %16)
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = icmp eq i32* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %14
  store i32* null, i32** %3, align 8
  br label %33

21:                                               ; preds = %14
  %22 = load i32*, i32** %7, align 8
  %23 = call i32* @BufToK(i32* %22, i32 1, i32 0, i32* null)
  store i32* %23, i32** %6, align 8
  %24 = load i32*, i32** %6, align 8
  %25 = icmp eq i32* %24, null
  br i1 %25, label %26, label %29

26:                                               ; preds = %21
  %27 = load i32*, i32** %7, align 8
  %28 = call i32* @BufToK(i32* %27, i32 1, i32 1, i32* null)
  store i32* %28, i32** %6, align 8
  br label %29

29:                                               ; preds = %26, %21
  %30 = load i32*, i32** %7, align 8
  %31 = call i32 @FreeBuf(i32* %30)
  %32 = load i32*, i32** %6, align 8
  store i32* %32, i32** %3, align 8
  br label %33

33:                                               ; preds = %29, %20, %13
  %34 = load i32*, i32** %3, align 8
  ret i32* %34
}

declare dso_local i32* @PackGetBuf(i32*, i8*) #1

declare dso_local i32* @BufToK(i32*, i32, i32, i32*) #1

declare dso_local i32 @FreeBuf(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
